# heliolinx

./: .gitignore  README.md  conda-requirements.txt  pyproject.toml  setup.py
heliolinx/: solarsyst_dyn_geo.py
python/heliolinx/: _version.py  obsCodes.txt  solarsyst_dyn_geo.py
src/: Makefile  analyze_linkage01a.cpp  helio_highgrade.cpp  heliolinc.cpp  heliolinc_R.cpp  heliolinc_RR.cpp  heliolinc_kd.cpp  heliolinc_lowmem.cpp  heliolinc_omp.cpp  heliolinc_ompkd.cpp  heliolinx.cpp  heliovane.cpp  label_hldet.cpp  link_planarity.cpp  link_purify.cpp  make_tracklets.cpp  make_tracklets8.cpp  make_tracklets_new.cpp  make_trailed_tracklets.cpp  merge_tracklet_files.cpp  modsplit_hlfile.cpp  parse_clust2det.cpp  parse_clust2det_MPC80.cpp  parse_trk2det.cpp  solarsyst_dyn_geo01.cpp  solarsyst_dyn_geo01.h  split_hlfile.cpp
tests/: README_test_TenObjects01a.txt  test_TenObjects01a.csv
tools/: build_wheels.sh
